# ai-app-template

./: CLAUDE.md  README.md  TDD_TidyFirst_Guide_JP.md  bun.lockb  index.html  package.json
.claude/commands/: design.md  rapid.md  requirements.md
.claude/slash_commands/: requirements.md
backend/: .coverage  README.md  openapi.json  pyproject.toml  run_dev.py
backend/app/: main.py
backend/app/api/: hello.py  image_generation.py  image_routes.py
backend/scripts/: generate-types.sh
backend/src/ai_app_backend/: __init__.py
backend/tests/: test_hello.py  test_image_generation.py  test_image_routes.py
docs/requirements/20250127_タスクRPG/: 01_idea_generation.md  02_evaluation.md  03_requirements.md
e2e/: todo.spec.ts
frontend/: .env.example  biome.json  bun.lockb  package-lock.json  package.json  playwright.config.ts  test-api.js
frontend/e2e/: todo.spec.ts
frontend/src/: App.tsx  test-setup.ts
frontend/src/components/: TodoItem.test.tsx
frontend/src/components/ImageGeneration/: ImageGallery.tsx  ImageGenerator.tsx  PromptInput.tsx  SizeSelector.tsx  StyleSelector.tsx  api.ts  index.ts  types.ts
frontend/src/pages/: MusicApiDemo.tsx
frontend/src/store/: todoStore.test.ts  todoStore.ts
prompts/: README.md  constraints.md
prompts/ai-features/: music-generation.md  suno-api-integration-guide.md
prompts/design/: README.md  basic-design-template.md  design-example.md  design-guide.md
prompts/implementation/: image-generation.md
prompts/requirements/: README.md  example-usage.md  feasibility-checklist.md  idea-generation.md  requirements-evaluation.md
scripts/: README.md  dev.sh  setup.sh
src/store/: todoStore.ts
